fixing external libs issues for test